# AI-Portfolio

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_RU.md  CONTRIBUTING.md  backlog.md  export.json  package-lock.json  plan-rag-api-new-develop.md  rag-api-new-doc.md  resp.json  tech-task-rag-api-new-develop.md
scripts/: ingest.py  pyproject.toml  settings.py
services/content-api/: Dockerfile  pyproject.toml
services/content-api-new/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
services/content-api-new/alembic/: env.py
services/content-api-new/alembic/versions/: 0001_init.py  0002_add_project_fields.py  0003_company_experience_projects.py  0004_add_company_role_md.py  0005_add_hero_focus_work_section_models.py  0006_add_icon_to_work_approach.py
services/content-api-new/app/: db.py  main.py  settings.py
services/content-api-new/app/core/: config.py
services/content-api-new/app/models/: __init__.py  contact.py  experience.py  experience_project.py  focus_area.py  hero_tag.py  profile.py  project.py  publication.py  section_meta.py  stats.py  tech_focus.py  technology.py  work_approach.py
services/content-api-new/app/routers/: contacts.py  experience.py  focus_areas.py  hero_tags.py  profile.py  projects.py  publications.py  rag.py  section_meta.py  stats.py  tech_focus.py  work_approaches.py
services/content-api-new/app/schemas/: contact.py  experience.py  focus_area.py  hero_tag.py  profile.py  project.py  publication.py  rag.py  rag_export.py  section_meta.py  stats.py  tech_focus.py  technology.py  work_approach.py
services/content-api-new/app/seed/: seed_ai_portfolio_new.py
services/content-api/app/: api_export.py  api_projects.py  api_technologies.py  deps.py  main.py
services/content-api/app/alembic/: env.py
services/content-api/app/database/: db.py  models.py
services/content-api/app/schemas/: achievement_schema.py  document_schema.py  export_schema.py  ingest_schema.py  project_schema.py  tech_schema.py
services/content-api/scripts/: seed_content_alor.py  seed_content_aston.py  seed_content_progress.py  seed_content_spargo.py  seed_hyper_keeper.py
services/rag-api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/rag-api-new/: Dockerfile  pyproject.toml  rag-api-new-doc.md
services/rag-api-new/app/: deps.py  main.py  settings.py
services/rag-api-new/app/agent/: __init__.py  agent_tools.py  followup.py  graph.py  memory.py  (+4 more)
services/rag-api-new/tests/: __init__.py  test_answer_llm_usage.py  test_smoke.py  test_tz_v3_acceptance.py
services/rag-api/app/: api_admin.py  api_ask.py  api_ingest.py  api_ingest_batch.py  deps.py  main.py  settings.py
(+145 files in other folders)
