[project]
name = "scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
