[project]
name = "content-api-new"
version = "0.1.0"
description = "AI Portfolio content API (Next.js frontend + RAG documents)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "alembic>=1.13.2"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
