[project]
name = "content-api"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "alembic",
  "pydantic>=2",
  "pydantic-settings>=2.2",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "httpx", "pytest-asyncio"]
