[project]
name = "rag-api-new"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  # --- FastAPI + сервер ---
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",

  # --- LangChain v1 стек (как в ReAct-Agent) ---
  "langchain==1.0.5",
  "langchain-community==0.4.1",
  "langchain-text-splitters==1.0.0",

  # --- LangGraph (агенты + память) ---
  "langgraph==1.0.3",
  "langgraph-checkpoint==3.0.1",
  "langgraph-prebuilt==1.0.2",

  # --- Провайдеры / векторка ---
  "langchain-openai>=0.3.0",
  "langchain-chroma>=0.2.0,<0.3.0",
  "chromadb>=0.5.15",

  # --- Модели эмбеддингов ---
  "sentence-transformers>=3.0.0,<4.0.0",

  # --- Конфиг / утилиты ---
  "pydantic==2.12.4",
  "pydantic-settings==2.12.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.32,<3.0",

  # --- BM25 для гибридного поиска ---
  "rank-bm25>=0.2.2,<0.3",
]
