[project]
name = "rag-api"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "langchain>=0.3",
  "langchain-community>=0.3.7",
  "langchain-chroma>=0.1.4",
  "langchain-openai>=0.2",
  "chromadb>=0.5",
  "pydantic>=2",
  "pydantic-settings>=2.2",
  "sentence-transformers",
  "python-dotenv",
  "requests",
  "rank-bm25>=0.2.2,<0.3",
]
